--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,98 @@
 <html>
   <head>
     <title>Myapp</title>
-    <%= csrf_meta_tags %>
+     <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Test Me: Super Easy FCE</a>
+      <button class="btn" type="button" data-toggle="modal" data-target="#popUpLogIn">Log in</button>
+      <button class="btn btn-outline-success" data-toggle="modal" data-target="#popUpSignUp" type="button">Sign up for FREE</button>
+    </nav>
+    
+    
+      <!-- Sign in modal -->
+      <div class="modal fade" id="popUpSignUp">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1>Sign up</h1>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <% provide(:title, 'Sign up') %>
+                <%= form_for(@user) do |f| %>
+                  <%= f.label :name, "Your Name"%>
+                  <%= f.text_field :name, class: "form-control"%>
+                  
+                  <%= f.label :email, "Email" %>
+                  <%= f.email_field :email, class: "form-control"%>
+                            
+                  <%= f.label :password, "Password" %>
+                  <%= f.password_field :password, class: "form-control" %>
+                            
+                  <%= f.label :password_confirmation, "Confirm Password" %>
+                  <%= f.password_field :password_confirmation, type: "password", class: "form-control"%>
+                            
+                  <%= f.submit "Create my FREE account!", class: "form-control btn btn-primary" %>
+                <% end %>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <div>
+                <p>Already have an account?</p><br><br>
+              </div>
+              <a href="#popUpLogIn" data-toggle="modal" data-dismiss="modal">Log in</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Log in modal -->
+      <div class="modal fade" id="popUpLogIn">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1>Log in</h1>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <% provide(:title, 'Log in') %>
+                <%= form_for(@user) do |f| %>
+                  <%= f.label :email, "Email" %>
+                  <%= f.email_field :email, class: "form-control"%>
+          
+                  <%= f.label :password, "Password" %>
+                  <%= f.password_field :password, class: "form-control" %>
+          
+                  <%= f.submit "Log in", class: "form-control btn btn-primary" %>
+                  <% end %>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <p>Don't have an account yet? Sign up for FREE!</p>
+              <a href="#popUpLogIn" data-toggle="modal" data-dismiss="modal">Sign up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <%= yield %>
   </body>
 </html>
