--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,9 @@
-<h1> Hi there</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Welcome to Test Me: FCE</h1>
+    <p class="lead">Practise with hundreds of free FCE questions with answers and explanation. Start for FREE!</p>
+    <button class="btn" type="button">
+        <%= link_to 'Click Here', "#", data: {toggle: "modal", target: "#popUpSignUp"} %>
+    </button>
+  </div>
+</div>
