added courses, mtom relationship

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => "navbar" %>
+
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">Welcome to Test Me: FCE</h1>
@@ -7,3 +9,5 @@
     </button>
   </div>
 </div>
+
+<%= render :partial => "pay" %>
