--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,20 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-3">Hello <%= @user.name.capitalize %>!</h1>
-        <p>Ready to study? Here are your recent courses.</p>
+        <p>Ready to study? Start a new course!</p>
+        <div class="container">
+        <!-- Row of columns for recent courses -->
+      
+          <div class="row">
+            <% @user.courses.each do |course| %>
+            <div class="col-md-4">
+              <h2><%= course.name %></h2>
+              <p><%= course.description %></p>
+              <%= button_to "Continue Studying", course_path(course), method: :get, class:"btn btn-secondary", role:"button" %>
+              </div>
+              <% end %>
+            </div>
+
         <div class="container" id="course_list">
             
         </div>
@@ -14,22 +27,4 @@
       </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
+    
