--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,16 +1,32 @@
 <%= render :partial => "pages/navbar" %>
+<br><br>
+<div class="container">
+<%= form_tag courses_path, :method => 'get' do %>
+    <div class="input-group">
+        <label class="sr-only" for="searchInput">Search</label>
+        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search for a course" %>
+        <div class="input-group-btn">
+            <button type="submit" class="btn btn-primary">GO</button>
+        </div>
+    </div>
+<% end %>
+</div><br><br>
 
-<div class="row">
-  <% @courses.each do |course| %>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-block">
-        <h3 class="card-title"><%= course.name %></h3>
-        <p class="card-text"><%= course.description %></p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+
+<div class="container">    
+  <div class="row">
+    <% @courses.each do |course| %>
+    <div class="col-sm-4">
+      <div class="card">
+        <%= image_tag(('card.jpg'), :class => "card-img-top", :alt => "Card image cap") %>
+        <div class="card-body">
+          <div class="card-title"><%= course.name %></div>
+          <div class="card-text"><%= course.description %></div>
+          <div><%= button_to "Learn", course_path(course), method: :get, class:"btn btn-primary" %></div>
+        </div>
       </div>
     </div>
+    <% end %>
   </div>
- <% end %>
 </div>
 
